--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@rainbow-me/rainbowkit": "^2.0.2",
     "@tanstack/react-query": "^5.28.6",
     "@wagmi/connectors": "4.1.18",
-    "antd": "^5.18.1",
+    "antd": "^5.7.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -29,6 +29,7 @@
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "next-transpile-modules": "^10.0.1",
     "rc-util": "^5.42.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
@@ -38,6 +39,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.13.8",
+    "semver": "^7.6.2",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
